--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
   <main>
 
     <div class="container">
-      <div class="categoria">DOLCI E DESSERT</div>
-      <h2>Tiramisù</h2>
+      
+      <div class="dettagli">
+        <div class="categoria">DOLCI E DESSERT</div>
+        <h2>Tiramisù</h2>
+      </div>
+
     </div>
 
   </main>
