--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
           </ul>
         </div>
 
+        <div class="banne">
+          <img src="img/banner.png" alt="banner">
+        </div>
+
         <div class="social">
           <ul>
             <li><a href="#"><i class="fa-brands fa-square-facebook"></i></a></li>
