--- a/index.html
+++ b/index.html
@@ -50,8 +50,31 @@
 
       </div>
 
-
-
+      <div class="presentazione">
+        <h3></h3>
+        <hr>
+        <img src="img/tiramisu.jpg" alt="tiramisu">
+      </div>
+      <p>
+        Back in the day, grandmothers used to prepare a breakfast that 
+        we might call humble today, but was considered very rich at 
+        the time! Today the recipe is still unchanged, just break a 
+        very fresh egg into a glass, beat it with sugar, and add 
+        coffee or hot milk, for children, or Marsala wine or aniseed 
+        for adults. This marvelous cream gave rise to mascarpone cream 
+        used to make Tiramisù (mascarpone cheese and ladyfingers 
+        dessert). This is the best Italian dessert, the most popular 
+        and beloved of them all, and it has also birthed many other 
+        versions, even an egg-free Tiramisù! There is also a 
+        strawberry and Nutella tiramisù! Although the origins of this 
+        famous dessert are unclear, because it is disputed between the 
+        regions of Veneto, Friuli-Venezia Giulia, Piedmont, and Tuscany, 
+        it remains a cornerstone of Italian cuisine and it's widely 
+        prepared from North to South. Unfortunately, we weren't able to 
+        find out who invented it, but we can certainly teach you how to 
+        prepare your best tiramisù ever. So here's the recipe: try it and 
+        let us know what you think!
+      </p>
     </div>
 
   </main>
