--- a/index.html
+++ b/index.html
@@ -76,8 +76,19 @@
         let us know what you think!
       </p>
     </div>
-
   </main>
+
+  <footer>
+    <div class="copyright">© 2021 Giallo Booleano S.p.a.</div>
+    <div class="indirizzo">Via Tal dei tali, 10 - 88046 Lamezia Terme - VAT 43940293020</div>
+    <ul>
+      <a href="#">About us</a>
+      <a href="#">Terms of use</a>
+      <a href="#">Privacy Policy</a>
+      <a href="#">Cookie Policy</a>
+      <a href="#">Disclaimer</a>
+    </ul>
+  </footer>
 
 </body>
 </html>
