fix: corretto posizionamento div

--- a/index.html
+++ b/index.html
@@ -42,21 +42,20 @@
             <li><b>Note</b>: +2 ore di riposo in frigo</li>
           </ul>
         </div>
+      </div>
 
-        <div class="banne">
-          <img src="img/banner.png" alt="banner">
-        </div>
+      <div class="banner">
+        <img src="img/banner.png" alt="banner">
+      </div>
 
-        <div class="social">
-          <ul>
-            <li><a href="#"><i class="fa-brands fa-square-facebook"></i></a></li>
-            <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-            <li><a href="#"><i class="fa-brands fa-pinterest"></i></a></li>
-            <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
-          </ul>
-        </div>
-
+      <div class="social">
+        <ul>
+          <li><a href="#"><i class="fa-brands fa-square-facebook"></i></a></li>
+          <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+          <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+          <li><a href="#"><i class="fa-brands fa-pinterest"></i></a></li>
+          <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+        </ul>
       </div>
 
       <div class="presentazione">
