refractor: aggiunto nuovo div info

--- a/index.html
+++ b/index.html
@@ -26,21 +26,23 @@
     <div class="container">
       
       <div class="dettagli">
-        <div class="categoria">DOLCI E DESSERT</div>
+        <div class="categoria">DOLCI E DESSERTS</div>
         <h2>Tiramisù</h2>
 
         <div class="card">
           <div class="video">
             <img src="img/image (10).png" alt="video">
           </div>
-          <h3>In breve</h3>
-          <ul>
-            <li>Difficoltà: <b>Facile</b></li>
-            <li>Tempo: <b>40 min</b></li>
-            <li>Porzione per: <b>8 persone</b></li>
-            <li>Costo: <b>contenuto</b></li>
-            <li><b>Note</b>: +2 ore di riposo in frigo</li>
-          </ul>
+          <div class="info">
+            <h3>In breve</h3>
+            <ul>
+              <li>Difficoltà: <b>Facile</b></li>
+              <li>Tempo: <b>40 min</b></li>
+              <li>Porzione per: <b>8 persone</b></li>
+              <li>Costo: <b>contenuto</b></li>
+              <li><b>Note</b>: +2 ore di riposo in frigo</li>
+            </ul>
+          </div>
         </div>
       </div>
 
