--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
       <div class="social">
         <ul>
-          <li><a href="#"><i class="fa-brands fa-square-facebook"></i></a></li>
+          <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
           <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
           <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
           <li><a href="#"><i class="fa-brands fa-pinterest"></i></a></li>
