feat: aggiunto titolo sezione presentazione

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </div>
 
       <div class="presentazione">
-        <h3></h3>
+        <h3>PRESENTATION</h3>
         <hr>
         <img src="img/tiramisu.jpg" alt="tiramisu">
       </div>
