--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
           we might call humble today, but was considered very rich at 
           the time! Today the recipe is still unchanged, just break a 
           very fresh egg into a glass, beat it with sugar, and add 
-          coffee or hot milk, for children, or Marsala wine or aniseed 
+          coffee or hot milk, for children, or <b>Marsala wine</b> or aniseed 
           for adults. This marvelous cream gave rise to mascarpone cream 
-          used to make Tiramisù (mascarpone cheese and ladyfingers 
-          dessert). This is the best Italian dessert, the most popular 
+          used to make <b>Tiramisù</b> (mascarpone cheese and ladyfingers 
+          dessert). This is the <b>best Italian dessert</b>, the most popular 
           and beloved of them all, and it has also birthed many other 
           versions, even an egg-free Tiramisù! There is also a 
           strawberry and Nutella tiramisù! Although the origins of this 
@@ -85,7 +85,7 @@
           let us know what you think!
         </p>
       </div>
-      
+
     </div>
   </main>
 
