fix: inseriti <il> nella lista footer

--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
     <div class="copyright">© 2021 Giallo Booleano S.p.a.</div>
     <div class="indirizzo">Via Tal dei tali, 10 - 88046 Lamezia Terme - VAT 43940293020</div>
     <ul>
-      <a href="#">About us</a>
-      <a href="#">Terms of use</a>
-      <a href="#">Privacy Policy</a>
-      <a href="#">Cookie Policy</a>
-      <a href="#">Disclaimer</a>
+      <li><a href="#">About us</a></li>
+      <li><a href="#">Terms of use</a></li>
+      <li><a href="#">Privacy Policy</a></li>
+      <li><a href="#">Cookie Policy</a></li>
+      <li><a href="#">Disclaimer</a></li>
     </ul>
   </footer>
 
