style: evidenziato testo footer

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   </main>
 
   <footer>
-    <div class="copyright">© 2021 Giallo Booleano S.p.a.</div>
+    <div class="copyright"><b>© 2021 Giallo Booleano S.p.a.</b></div>
     <div class="indirizzo">Via Tal dei tali, 10 - 88046 Lamezia Terme - VAT 43940293020</div>
     <ul>
       <li><a href="#">About us</a></li>
