fix: aggiunto testo mancante

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       
       <div class="dettagli">
         <div class="categoria">DOLCI E DESSERTS</div>
-        <h2>Tiramisù</h2>
+        <h2>Tiramisù <span>(Dolce Tradizionale)</span></h2>
 
         <div class="card">
           <div class="video">
