--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
 
       <div class="social">
         <ul>
-          <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-          <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
-          <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-          <li><a href="#"><i class="fa-brands fa-pinterest"></i></a></li>
-          <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+          <li><a href="#"><i class="fa-brands fa-facebook"></i> <span>Facebook</span></a></li>
+          <li><a href="#"><i class="fa-brands fa-twitter"></i></a> <span>Twitter</span></li>
+          <li><a href="#"><i class="fa-brands fa-instagram"></i></a> <span>Instagram</span></li>
+          <li><a href="#"><i class="fa-brands fa-pinterest"></i></a> <span>Pinterest</span></li>
+          <li><a href="#"><i class="fa-brands fa-youtube"></i></a> <span>YouTube</span></li>
         </ul>
       </div>
 
