--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
       <div class="social">
         <ul>
           <li><a href="#"><i class="fa-brands fa-facebook"></i> <span>Facebook</span></a></li>
-          <li><a href="#"><i class="fa-brands fa-twitter"></i></a> <span>Twitter</span></li>
-          <li><a href="#"><i class="fa-brands fa-instagram"></i></a> <span>Instagram</span></li>
-          <li><a href="#"><i class="fa-brands fa-pinterest"></i></a> <span>Pinterest</span></li>
-          <li><a href="#"><i class="fa-brands fa-youtube"></i></a> <span>YouTube</span></li>
+          <li><a href="#"><i class="fa-brands fa-twitter"></i> <span>Twitter</span></a></li>
+          <li><a href="#"><i class="fa-brands fa-instagram"></i> <span>Instagram</span></a></li>
+          <li><a href="#"><i class="fa-brands fa-pinterest"></i> <span>Pinterest</span></a></li>
+          <li><a href="#"><i class="fa-brands fa-youtube"></i> <span>YouTube</span></a></li>
         </ul>
       </div>
 
