--- a/index.html
+++ b/index.html
@@ -90,8 +90,10 @@
   </main>
 
   <footer>
-    <div class="copyright"><b>© 2021 Giallo Booleano S.p.a.</b></div>
-    <div class="indirizzo">Via Tal dei tali, 10 - 88046 Lamezia Terme - VAT 43940293020</div>
+    <div class="containter">
+      <div class="copyright"><b>© 2021 Giallo Booleano S.p.a.</b></div>
+      <div class="indirizzo">Via Tal dei tali, 10 - 88046 Lamezia Terme - VAT 43940293020</div>
+    </div>
     <ul>
       <li><a href="#">About us</a></li>
       <li><a href="#">Terms of use</a></li>
